@@ -110,3 +110,4 @@
 17-Aug-2021  - V1.19 Add sendContentType for postUnwrapped in UrlRequestUtil()
 28-Aug-2021  - V1.20 Add minimum file size warning for mmCIF deserializer
  3-Sep-2021  - V1.21 Add FileLock() module
+ 8-Sep-2021  - V1.22 Add LogUtil() structured logging formatter module
